# instinctools_GA

Problems/: Bel_cities.py  Cats_Dogs.py  IPV6.py  John_Cinema.py  Latin.py  Molecules.py  Name.py  days.py  height.py  numbered_str.py  squared.py  years_diff.py
bonus/: output.csv  valuation.py
bonus_clean/: Fizz.py  photomosaic.py
math_server_compose/: README.txt  docker-compose.yml
math_server_compose/compose_build/: Dockerfile  Dockerfile_alembic  Dockerfile_flask  Dockerfile_integr_tests  Dockerfile_socket  Dockerfile_unittests
week2/: Levenshtein.py  Monte-Carlo.py  dynamic1.py  dynamic2.py  graph.csv  graph.py  shopping.py  tree.py  tree1.csv  tree2.csv
week2/sortings/: insertions.py  merge_sort.py  quick_sort.py  shaking.py  sort_timer.py
week3/: context_timer.py  my_yaml.yaml  storage.py  valid_arguments.py  valid_nums.py
week4/: OOP_example.py  Point3D.py  deposit.py  fasta.py  get.py  num_wrapper.py  order.py
week5/: calculations.py  config.py  path_gen.py  yaml-gen.py
week5/http/: calculations.py  flask_server.py
week6/: db_conn.py  db_methods.py  raw_sql_examples.py  table_creator.py
week7/calc-project/: MANIFEST.in  README.txt  setup.cfg  setup.py
week7/calc-project/calc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
week7/calc-project/calc1/: calculations.py  config.py  data_models.py  db_methods.py
week7/calc-project/calc1/http/: flask_server.py
week7/calc-project/calc1/socket/: .env  server.py
week8/: calculations.py  http_checker.py  pi_number.py
week9/: compose.env  docker-compose.yml
(+84 files in other folders)
