[metadata]
name = calc
version = 0.1
author = Egor Bagatyrevich
url = https://github.com/MalinavyBusel
description='A module for processing simple calculations.'
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
install_requires =
    flask==2.0.3
    sqlalchemy==1.4.32
    pydantic==1.9.0
    pythondotenv==0.19.2

[sdist]
formats = zip
